# Monte_Carlo_Cluster_LP

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_backends.py  benchmark_gpu_throughput.py  benchmark_solver_seeding_total_time.py
examples/: compare_numpy_torch_numba.py  gpu_random_lp.py  gpu_tiny_2d_lp.py  random_vs_scipy.py  tiny_2d_lp.py  toy_3d_visual_demo.py
experiments/: certificate_validation.py  corner_discovery.py  run_full_extension_evaluation.py  scaling_by_dimension.py
notebooks/: 01_basic_solver_demo.ipynb  02_active_set_visualization.ipynb  03_benchmark_against_scipy.ipynb  04_vertex_polishing_demo.ipynb  05_soft_active_set_recovery_demo.ipynb  06_full_benchmark_and_certification_report.ipynb  07_method_viability_analysis.ipynb
scripts/: make_benchmark_plots.py  profile_solver.py  run_ablation.py  run_benchmark.py  run_random_dense_benchmark.py  run_solver_hint_experiment.py  run_toy_visuals.py
src/lpas/: __init__.py
tests/: __init__.py  backend_helpers.py  conftest.py  test_backend_equivalence.py  test_gpu_memory_safety.py  test_numba_backend.py  test_torch_batch_metrics.py  test_torch_device.py  test_torch_sampler.py  test_torch_solver_loop.py
tests/integration/: test_experiment_scripts.py  test_polishing_improves_2d_lp.py  test_solver_degenerate_lp.py  test_solver_infeasible_lp.py  test_solver_small_lp.py  test_solver_unbounded_lp.py  test_warm_start_handoff.py
tests/regression/: test_benchmark_quality.py  test_experimental_layers.py  test_fixed_seed_behavior.py  test_polishing_benchmark_regression.py
(+82 files in other folders)
