[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lp-adaptive-sampling"
version = "0.1.0"
description = "Geometry-aware primal-dual adaptive sampling research prototype for linear programming"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.4",
]
numba = [
  "numba>=0.60",
]
parallel = [
  "torch>=2.4",
  "numba>=0.60",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
